expose metrics port in operator deployment

--- a/hack/charts/cluster-api-operator/templates/deployment.yaml
+++ b/hack/charts/cluster-api-operator/templates/deployment.yaml
@@ -95,6 +95,9 @@ spec:
         - containerPort: 9443
           name: webhook-server
           protocol: TCP
+        - containerPort: {{ ( split ":" $.Values.metricsBindAddr)._1 | int }}
+          name: metrics
+          protocol: TCP
         {{- with .Values.resources.manager }}
         resources:
         {{- toYaml . | nindent 12 }}
