feat(rbac): use real ServiceAccount instead of default

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         control-plane: controller-manager
     spec:
+      serviceAccountName: manager
+      automountServiceAccountToken: true
       containers:
       - command:
         - /manager
