--- a/test/e2e/resources/full-chart-install.yaml
+++ b/test/e2e/resources/full-chart-install.yaml
@@ -1,5 +1,14 @@
 ---
 # Source: cluster-api-operator/templates/operator-components.yaml
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  labels:
+    clusterctl.cluster.x-k8s.io/core: capi-operator
+  name: capi-operator-manager
+  namespace: 'default'
+---
+# Source: cluster-api-operator/templates/operator-components.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -17702,7 +17711,7 @@ roleRef:
   name: capi-operator-manager-role
 subjects:
 - kind: ServiceAccount
-  name: default
+  name: capi-operator-manager
   namespace: 'default'
 ---
 # Source: cluster-api-operator/templates/operator-components.yaml
@@ -17767,7 +17776,7 @@ roleRef:
   name: capi-operator-leader-election-role
 subjects:
 - kind: ServiceAccount
-  name: default
+  name: capi-operator-manager
   namespace: 'default'
 ---
 # Source: cluster-api-operator/templates/operator-components.yaml
@@ -17818,6 +17827,8 @@ spec:
         control-plane: controller-manager
         clusterctl.cluster.x-k8s.io/core: capi-operator
     spec:
+      serviceAccountName: capi-operator-manager
+      automountServiceAccountToken: true
       containers:
       - args:
         - --v=2
