Add deployment overrides to templates files
Signed-off-by: Omer Aplatony <omerap12@gmail.com>

--- a/hack/charts/cluster-api-operator/templates/addon.yaml
+++ b/hack/charts/cluster-api-operator/templates/addon.yaml
@@ -51,4 +51,7 @@ spec:
   secretNamespace: {{ $.Values.secretNamespace }}
 {{- end }}
 {{- end }}
+{{- if hasKey $.Values.deploymentOverride "addon" }}
+  {{ .Values.deploymentOverride.addon | toYaml | nindent 2 }}
+{{- end }}
 {{- end }}
