--- a/hack/charts/cluster-api-operator/templates/core.yaml
+++ b/hack/charts/cluster-api-operator/templates/core.yaml
@@ -59,4 +59,7 @@ spec:
     namespace: {{ $.Values.configSecret.namespace }}
     {{- end }}
 {{- end }}
+{{- if hasKey $.Values.deploymentOverride "core" }}
+  {{ .Values.deploymentOverride.core | toYaml | nindent 2 }}
+{{- end }}
 {{- end }}
