--- a/hack/charts/cluster-api-operator/templates/infra-conditions.yaml
+++ b/hack/charts/cluster-api-operator/templates/infra-conditions.yaml
@@ -56,5 +56,8 @@ spec:
     {{- end }}
 {{- end }}
 {{- end }}
-
+{{- if hasKey $.Values.deploymentOverride "infraCondition" }}
+  {{ .Values.deploymentOverride.infraCondition | toYaml | nindent 2 }}
 {{- end }}
+{{- end }}
+
