--- a/hack/charts/cluster-api-operator/templates/infra.yaml
+++ b/hack/charts/cluster-api-operator/templates/infra.yaml
@@ -65,4 +65,7 @@ spec:
     {{- end }}
 {{- end }}
 {{- end }}
+{{- if hasKey $.Values.deploymentOverride "infrastructure" }}
+  {{ .Values.deploymentOverride.infrastructure | toYaml | nindent 2 }}
+{{- end }}
 {{- end }}
