--- a/hack/charts/cluster-api-operator/templates/control-plane.yaml
+++ b/hack/charts/cluster-api-operator/templates/control-plane.yaml
@@ -52,4 +52,8 @@ spec:
     {{- end }}
 {{- end }}
 {{- end }}
+{{- if hasKey $.Values.deploymentOverride "controlPlane" }}
+  {{ .Values.deploymentOverride.controlPlane | toYaml | nindent 2 }}
 {{- end }}
+{{- end }}
+
