--- a/hack/charts/cluster-api-operator/templates/core-conditions.yaml
+++ b/hack/charts/cluster-api-operator/templates/core-conditions.yaml
@@ -27,5 +27,7 @@ spec:
     {{- end }}
 {{- end }}
 {{- end }}
+{{- if hasKey $.Values.deploymentOverride "coreCondition" }}
+  {{ .Values.deploymentOverride.coreCondition| toYaml | nindent 2 }}
 {{- end }}
-
+{{- end }}
