--- a/test/e2e/resources/multiple-bootstrap-custom-ns-versions.yaml
+++ b/test/e2e/resources/multiple-bootstrap-custom-ns-versions.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    "helm.sh/hook": "post-install"
+    "helm.sh/hook": "post-install,post-upgrade"
     "helm.sh/hook-weight": "1"
   name: kubeadm-bootstrap-custom-ns
 ---
@@ -13,7 +13,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    "helm.sh/hook": "post-install"
+    "helm.sh/hook": "post-install,post-upgrade"
     "helm.sh/hook-weight": "1"
   name: rke2-bootstrap-custom-ns
 ---
@@ -22,7 +22,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    "helm.sh/hook": "post-install"
+    "helm.sh/hook": "post-install,post-upgrade"
     "helm.sh/hook-weight": "1"
   name: capi-system
 ---
@@ -33,7 +33,7 @@ metadata:
   name: kubeadm
   namespace: kubeadm-bootstrap-custom-ns
   annotations:
-    "helm.sh/hook": "post-install"
+    "helm.sh/hook": "post-install,post-upgrade"
     "helm.sh/hook-weight": "2"
 spec:
   version: v1.5.4
@@ -48,7 +48,7 @@ metadata:
   name: rke2
   namespace: rke2-bootstrap-custom-ns
   annotations:
-    "helm.sh/hook": "post-install"
+    "helm.sh/hook": "post-install,post-upgrade"
     "helm.sh/hook-weight": "2"
 spec:
   version: v0.3.0
@@ -63,7 +63,7 @@ metadata:
   name: cluster-api
   namespace: capi-system
   annotations:
-    "helm.sh/hook": "post-install"
+    "helm.sh/hook": "post-install,post-upgrade"
     "helm.sh/hook-weight": "2"
 spec:
   configSecret:
