--- a/hack/charts/cluster-api-operator/templates/addon.yaml
+++ b/hack/charts/cluster-api-operator/templates/addon.yaml
@@ -53,7 +53,7 @@ spec:
   secretNamespace: {{ $.Values.secretNamespace }}
 {{- end }}
 {{- end }}
-{{- if hasKey $.Values.deploymentOverride "addon" }}
+{{- if hasKey (default (dict) $.Values.deploymentOverride) "addon" }}
   {{ .Values.deploymentOverride.addon | toYaml | nindent 2 }}
 {{- end }}
 {{- end }}
