--- a/hack/charts/cluster-api-operator/templates/control-plane.yaml
+++ b/hack/charts/cluster-api-operator/templates/control-plane.yaml
@@ -52,7 +52,7 @@ spec:
     {{- end }}
 {{- end }}
 {{- end }}
-{{- if hasKey $.Values.deploymentOverride "controlPlane" }}
+{{- if hasKey (default (dict) $.Values.deploymentOverride) "controlPlane" }}
   {{ .Values.deploymentOverride.controlPlane | toYaml | nindent 2 }}
 {{- end }}
 {{- end }}
