--- a/hack/charts/cluster-api-operator/templates/infra-conditions.yaml
+++ b/hack/charts/cluster-api-operator/templates/infra-conditions.yaml
@@ -60,7 +60,7 @@ spec:
     {{- end }}
 {{- end }}
 {{- end }}
-{{- if hasKey $.Values.deploymentOverride "infraCondition" }}
+{{- if hasKey (default (dict) $.Values.deploymentOverride ) "infraCondition" }}
   {{ .Values.deploymentOverride.infraCondition | toYaml | nindent 2 }}
 {{- end }}
 {{- end }}
